Closed Bug 460551 Opened 16 years ago Closed 16 years ago

overrideCTM is no longer necessary

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: longsonr, Assigned: longsonr)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
See bug 459512 comment 15
Attachment #343681 - Flags: superreview?(roc)
Attachment #343681 - Flags: review?(roc)
Attached patch patchSplinter Review
Attachment #343681 - Attachment is obsolete: true
Attachment #343682 - Flags: superreview?(roc)
Attachment #343682 - Flags: review?(roc)
Attachment #343681 - Flags: superreview?(roc)
Attachment #343681 - Flags: review?(roc)
Comment on attachment 343682 [details] [diff] [review]
patch

Woohoo!
Attachment #343682 - Flags: superreview?(roc)
Attachment #343682 - Flags: superreview+
Attachment #343682 - Flags: review?(roc)
Attachment #343682 - Flags: review+
checked in 8994763880c9
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: