Bug 460551 - overrideCTM is no longer necessary. r+sr=roc