layout/svg/base/src/nsSVGTSpanFrame.cpp
@@ -100,24 +100,6 @@ nsSVGTSpanFrame::AttributeChanged(PRInt32         aNameSpaceID,
 }
 
 //----------------------------------------------------------------------
-// nsISVGChildFrame methods
-
-NS_IMETHODIMP
-nsSVGTSpanFrame::SetOverrideCTM(nsIDOMSVGMatrix *aCTM)
-{
-  mOverrideCTM = aCTM;
-  return NS_OK;
-}
-
-already_AddRefed<nsIDOMSVGMatrix>
-nsSVGTSpanFrame::GetOverrideCTM()
-{
-  nsIDOMSVGMatrix *matrix = mOverrideCTM.get();
-  NS_IF_ADDREF(matrix);
-  return matrix;
-}
-
-//----------------------------------------------------------------------
 // nsSVGContainerFrame methods:
 
 already_AddRefed<nsIDOMSVGMatrix>
@@ -125,12 +107,7 @@ nsSVGTSpanFrame::GetCanvasTM()
 {
   if (!GetMatrixPropagation()) {
     nsIDOMSVGMatrix *retval;
-    if (mOverrideCTM) {
-      retval = mOverrideCTM;
-      NS_ADDREF(retval);
-    } else {
-      NS_NewSVGMatrix(&retval);
-    }
+    NS_NewSVGMatrix(&retval);
     return retval;
   }
 
